app/page.css
@import url('https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@100..900&display=swap');

:root {
    --bg: #fff;
    --text: #111;

    --anchor: #777;
    --anchor-hover: #bbb;

    --code-bg: #ddd;
    --hr-bg: #ccc;

    --footer-text: #ddd;
}

[data-theme='dark'] {
    --bg: #111;
    --text: #eee;

    --anchor: #bbb;
    --anchor-hover: #fff;

    --code-bg: #222;
    --hr-bg: #333;

    --footer-text: #333;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Geist';
    font-weight: 300;

    font-size: 25px;
    line-height: 1.5;

    margin: 0;

    background: var(--bg);
    color: var(--text);
}

.container {
    width: 100%;
    margin: 10%;

    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;

    gap: 10px;
}

nav {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    justify-content: flex-start;
    gap: 15px;

    width: 100%;
}

nav a {
    font-family: 'Noto Sans Mono';
    text-decoration: none;
    color: var(--anchor);
    transition: all 0.5s ease;
}

nav a:hover {
    transform: scale(1.1);
    color: var(--anchor-hover);
    text-shadow: 0 0 10px var(--anchor-hover);
}

nav a::after {
    content: '';
    position: absolute;
    left: 0;
    bottom: 0;

    width: 0;
    height: 2px;
    background: var(--anchor);
    transition: all 0.5s ease-out;
}

nav a:hover::after {
    background: var(--anchor-hover);
    width: 100%;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: 'Noto Sans Mono';
    font-weight: 400;
}

code {
    background: var(--code-bg);
    padding: 2px;
    border-radius: 4px;

    font-weight: 400;
    font-family: 'Noto Sans Mono', monospace;
}

hr {
    width: 100%;
    height: 4px;

    background: var(--hr-bg);
    border: none;
}

button {
    position: fixed;
    right: 20px;
    bottom: 20px;

    width: 50px;
    height: 50px;

    font-family: 'Noto Sans Mono';
    font-size: 30px;

    background: #333;
    border: 2px solid #ccc;
    border-radius: 2147483647px;

    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;

    transition: all 0.5s ease;
}

button:hover {
    box-shadow: 0 5px 10px black;
    transform: scale(1.1);

    cursor: pointer;
}

button img {
    width: 80%;
    height: 80%;
}

footer {
    opacity: 0.5;
}

@media (max-width: 1024px) {
    body {
        font-size: 15px;
    }

    .container {
        margin: 2%;
    }
}

